--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -1104,7 +1104,8 @@
     <string name="display_white_balance_title" msgid="2624544323029364713">"વ્હાઇટ બૅલેન્સ ડિસ્પ્લે"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"Smooth Display"</string>
-    <string name="peak_refresh_rate_summary" msgid="1527087897198455042">"અમુક કન્ટેન્ટ માટે રિફ્રેશ થવાનો રેટ ઑટોમૅટિક રીતે 60થી વધારીને 90 Hz કરે છે. બૅટરીનો વપરાશ વધારે છે."</string>
+    <!-- no translation found for peak_refresh_rate_summary (3627278682437562787) -->
+    <skip />
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"રિફ્રેશ થવાનો રેટ ફરજિયાત પણે મહત્તમ લેવલે કરો"</string>
     <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"સ્પર્શના પ્રતિભાવમાં સુધારણા અને ઍનિમેશનની ક્વૉલિટી માટે ઉચ્ચતમ રિફ્રેશ રેટ. આ સુવિધા બૅટરીનો વપરાશ વધારે છે."</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"સ્ક્રીન અટેન્શન"</string>
@@ -1162,6 +1163,7 @@
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"બેડટાઇમ મોડનાં સેટિંગ"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"સ્ક્રીનનો સમય સમાપ્ત"</string>
     <string name="screen_timeout_summary" msgid="5558778019594643427">"નિષ્ક્રિયતાના <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> પછી"</string>
+    <string name="screen_timeout_summary_not_set" msgid="5107680774964178875">"સેટ નથી"</string>
     <string name="wallpaper_settings_title" msgid="5635129851136006383">"વૉલપેપર"</string>
     <string name="style_and_wallpaper_settings_title" msgid="2232042809407308946">"વૉલપેપર અને સ્ટાઇલ"</string>
     <string name="wallpaper_dashboard_summary" msgid="2324472863981057118">"હોમ, લૉક સ્ક્રીન"</string>
@@ -2412,12 +2414,9 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"શેડ્યૂલ સેટ કરો"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"બૅટરી આવરદા વધારો"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"ચાર્જ થાય ત્યારે બંધ કરો"</string>
-    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
-    <skip />
+    <string name="battery_saver_sticky_description_new" product="default" msgid="3618041244703216293">"તમારો ફોન <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>થી વધારે ચાર્જ થાય ત્યારે બૅટરી સેવર બંધ થાય છે"</string>
+    <string name="battery_saver_sticky_description_new" product="tablet" msgid="1733686775743601110">"તમારું ટૅબ્લેટ <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>થી વધારે ચાર્જ થાય ત્યારે બૅટરી સેવર બંધ થાય છે"</string>
+    <string name="battery_saver_sticky_description_new" product="device" msgid="7449283917787428755">"તમારું ડિવાઇસ <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>થી વધારે ચાર્જ થાય ત્યારે બૅટરી સેવર બંધ થાય છે"</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"ચાલુ કરો"</string>
@@ -2849,6 +2848,8 @@
     <string name="remove_guest_on_exit_summary" msgid="3969962695703280353">"અતિથિ મોડમાંથી બહાર નીકળતી વખતે તમામ અતિથિ ઍપ અને ડેટા ડિલીટ કરો"</string>
     <string name="remove_guest_on_exit_dialog_title" msgid="2310442892536079416">"શું અતિથિની પ્રવૃત્તિ ડિલીટ કરીએ?"</string>
     <string name="remove_guest_on_exit_dialog_message" msgid="8112409834021851883">"આ અતિથિ સત્રમાંની તમામ ઍપ અને ડેટા હમણાં ડિલીટ કરવામાં આવશે તેમજ ભવિષ્યમાં જ્યારે પણ તમે અતિથિ મોડમાંથી બહાર નીકળો, ત્યારે તમામ અતિથિ પ્રવૃત્તિ ડિલીટ કરવામાં આવશે"</string>
+    <!-- no translation found for remove_guest_on_exit_keywords (4961310523576166193) -->
+    <skip />
     <string name="enable_guest_calling" msgid="8300355036005240911">"અતિથિને ફોનનો ઉપયોગ કરવાની મંજૂરી આપો"</string>
     <string name="enable_guest_calling_summary" msgid="4748224917641204782">"કૉલ ઇતિહાસ અતિથિ વપરાશકર્તા સાથે શેર કરવામાં આવશે"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"ફોન કૉલ અને SMS ચાલુ કરો"</string>
@@ -3112,6 +3113,8 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"કૉલ વૉલ્યૂમ"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"અલાર્મ વૉલ્યૂમ"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"રિંગ અને નોટિફિકેશનનું વૉલ્યૂમ"</string>
+    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
+    <skip />
     <string name="notification_volume_option_title" msgid="4838818791683615978">"નોટિફિકેશન વૉલ્યૂમ"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"ફોન રિંગટોન"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"ડિફૉલ્ટ નોટિફિકેશન સાઉન્ડ"</string>
@@ -3703,8 +3706,6 @@
     <string name="filter_notif_blocked_apps" msgid="1065653868850012325">"બંધ કરેલી"</string>
     <string name="advanced_apps" msgid="7643010673326578815">"વિગતવાર"</string>
     <string name="app_permissions" msgid="8666537659217653626">"પરવાનગી મેનેજર"</string>
-    <string name="app_permissions_summary" msgid="2709819220672938860">"<xliff:g id="APPS">%1$s</xliff:g>નો ઉપયોગ કરતી ઍપ્લિકેશનો"</string>
-    <string name="app_permissions_summary_more" msgid="6247952473615352350">"<xliff:g id="APPS">%1$s</xliff:g>, વગેરેનો ઉપયોગ કરતી ઍપ"</string>
     <string name="tap_to_wake" msgid="3313433536261440068">"સક્રિય કરવા ટેપ કરો"</string>
     <string name="tap_to_wake_summary" msgid="6641039858241611072">"ઉપકરણને સક્રિય કરવા માટે સ્ક્રીન પર ગમે ત્યાં બે વાર ટેપ કરો"</string>
     <string name="domain_urls_title" msgid="7012209752049678876">"લિંક ખોલવી"</string>
@@ -3866,7 +3867,8 @@
     <string name="users_summary" msgid="8473589474976307510">"<xliff:g id="USER_NAME">%1$s</xliff:g> તરીકે સાઇન ઇન કર્યું"</string>
     <string name="android_version_summary" msgid="7818952662015042768">"Android <xliff:g id="VERSION">%1$s</xliff:g> પર અપડેટ કરેલ"</string>
     <string name="android_version_pending_update_summary" msgid="5404532347171027730">"અપડેટ ઉપલબ્ધ છે"</string>
-    <string name="disabled_by_policy_title" msgid="3635622338687810583">"IT ઍડમિન દ્વારા બ્લૉક કરાયેલું"</string>
+    <!-- no translation found for disabled_by_policy_title (6852347040813204503) -->
+    <skip />
     <string name="disabled_by_policy_title_adjust_volume" msgid="1669689058213728099">"વૉલ્યૂમ બદલી શકાતું નથી"</string>
     <string name="disabled_by_policy_title_outgoing_calls" msgid="400089720689494562">"કૉલ કરી શકાતા નથી"</string>
     <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"SMS સંદેશા મોકલી શકાતા નથી"</string>
@@ -3876,7 +3878,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"તમારા ક્રેડિટ પ્રદાતાએ બ્લૉક કર્યું છે"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"માતાપિતાની હાજરી જરૂરી છે"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"આ સેટઅપ કરવા માટે, આ ફોન તમારા માતાપિતાને આપો"</string>
-    <string name="default_admin_support_msg" msgid="8338570262037182531">"જો તમને કોઈ પ્રશ્ન હોય, તો તમારા IT વ્યવસ્થાપકનો સંપર્ક કરો"</string>
+    <!-- no translation found for default_admin_support_msg (8816296554831532033) -->
+    <skip />
     <string name="admin_support_more_info" msgid="8407433155725898290">"વધુ વિગતો"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"તમારા વ્યવસ્થાપક સેટિંગ, પરવાનગીઓ, કૉર્પોરેટ ઍક્સેસ, નેટવર્ક પ્રવૃત્તિ અને ડિવાઇસની સ્થાન માહિતી સહિત તમારી ઑફિસની પ્રોફાઇલ સાથે સંકળાયેલ ઍપ અને ડેટાને મૉનિટર અને મેનેજ કરી શકે છે."</string>
     <string name="admin_profile_owner_user_message" msgid="4929926887231544950">"તમારા વ્યવસ્થાપક સેટિંગ, પરવાનગીઓ, કૉર્પોરેટ ઍક્સેસ, નેટવર્ક પ્રવૃત્તિ અને ડિવાઇસની સ્થાન માહિતી સહિત આ વપરાશકર્તા સાથે સંકળાયેલ ઍપ અને ડેટાને મોનિટર અને મેનેજ કરી શકે છે."</string>
@@ -4707,6 +4710,8 @@
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"ડેવલપરના વિકલ્પોનો ઉપયોગ કરો"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"પ્રિન્ટ સેવાનો ઉપયોગ કરો"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"એકથી વધુ વપરાશકર્તાઓને મંજૂરી આપો"</string>
+    <!-- no translation found for multiple_users_main_switch_keywords (4845954458094134356) -->
+    <skip />
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"વાયરલેસ ડિબગીંગનો ઉપયોગ કરો"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"ગ્રાફિક્સ ડ્રાઇવરની પસંદગીઓનો ઉપયોગ કરો"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"રાત્રિ પ્રકાશનો ઉપયોગ કરો"</string>
