--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -1104,7 +1104,8 @@
     <string name="display_white_balance_title" msgid="2624544323029364713">"श्वेत सन्तुलन देखाउनुहोस्"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"Smooth Display"</string>
-    <string name="peak_refresh_rate_summary" msgid="1527087897198455042">"केही सामग्रीका लागि रिफ्रेस रेट स्वतः ६० हर्जबाट बढाएर ९० हर्ज बनाउँछ। ब्याट्रीको खपत बढाउँछ।"</string>
+    <!-- no translation found for peak_refresh_rate_summary (3627278682437562787) -->
+    <skip />
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"रिफ्रेस गर्ने दर बलपूर्वक सबैभन्दा बढी बनाउनुहोस्"</string>
     <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"स्क्रिनमा छुँदा स्क्रिनले जनाउने प्रतिक्रिया र एनिमेसनको गुणस्तर सुधार्न उच्चतम रिफ्रेस रेट। ब्याट्रीको खपत बढाउँछ।"</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"स्क्रिनमा हेरिरहँदा"</string>
@@ -1162,6 +1163,8 @@
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"बेडटाइम मोडसम्बन्धी सेटिङहरू"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"स्क्रिन टाइम आउट हुने समय"</string>
     <string name="screen_timeout_summary" msgid="5558778019594643427">"<xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g>को निष्क्रियतापछि"</string>
+    <!-- no translation found for screen_timeout_summary_not_set (5107680774964178875) -->
+    <skip />
     <string name="wallpaper_settings_title" msgid="5635129851136006383">"वालपेपर"</string>
     <string name="style_and_wallpaper_settings_title" msgid="2232042809407308946">"वालपेपर तथा शैली"</string>
     <string name="wallpaper_dashboard_summary" msgid="2324472863981057118">"होम, लक स्क्रिन"</string>
@@ -2412,12 +2415,9 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"समयतालिका सेट गर्नुहोस्‌"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"ब्याट्रीको खपत बढाउनुहोस्"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"चार्ज भएपछि अफ गरियोस्"</string>
-    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
-    <skip />
+    <string name="battery_saver_sticky_description_new" product="default" msgid="3618041244703216293">"तपाईंको फोनको चार्ज <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> भएपछि ब्याट्री सेभर अफ हुन्छ"</string>
+    <string name="battery_saver_sticky_description_new" product="tablet" msgid="1733686775743601110">"तपाईंको ट्याब्लेटको चार्ज <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> भएपछि ब्याट्री सेभर अफ हुन्छ"</string>
+    <string name="battery_saver_sticky_description_new" product="device" msgid="7449283917787428755">"तपाईंको डिभाइसको चार्ज <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> भएपछि ब्याट्री सेभर अफ हुन्छ"</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"अन गर्नुहोस्"</string>
@@ -2849,6 +2849,8 @@
     <string name="remove_guest_on_exit_summary" msgid="3969962695703280353">"अतिथि मोडबाट बाहिरिँदा अतिथि सत्रका सबै एप तथा डेटा मेटाइऊन्"</string>
     <string name="remove_guest_on_exit_dialog_title" msgid="2310442892536079416">"अतिथि सत्रका क्रियाकलाप मेटाउने हो?"</string>
     <string name="remove_guest_on_exit_dialog_message" msgid="8112409834021851883">"यो अतिथि सत्रका एप तथा डेटा अहिले नै मेटाइने छ र भविष्यमा तपाईं अतिथि मोडबाट बाहिरिँदा हरेक पटक अतिथि सत्रमा गरिने सबै क्रियाकलाप मेटाइने छन्"</string>
+    <!-- no translation found for remove_guest_on_exit_keywords (4961310523576166193) -->
+    <skip />
     <string name="enable_guest_calling" msgid="8300355036005240911">"अतिथिलाई फोन प्रयोग गर्न दिनुहोस्"</string>
     <string name="enable_guest_calling_summary" msgid="4748224917641204782">"अतिथि प्रयोगकर्तासँग कलको इतिहास सेयर गरिने छ"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"फोन कल तथा SMS सक्षम पार्नुहोस्"</string>
@@ -3112,6 +3114,8 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"कलको भोल्युम"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"अलार्मको भोल्युम"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"घन्टी तथा सूचनाको भोल्युम"</string>
+    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
+    <skip />
     <string name="notification_volume_option_title" msgid="4838818791683615978">"ध्वनी सूचना"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"फोनको रिङटोन"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"सूचना आउँदा बज्ने डिफल्ट साउन्ड"</string>
@@ -3703,8 +3707,6 @@
     <string name="filter_notif_blocked_apps" msgid="1065653868850012325">"अफ गरिएको छ"</string>
     <string name="advanced_apps" msgid="7643010673326578815">"उन्नत"</string>
     <string name="app_permissions" msgid="8666537659217653626">"पर्मिसन म्यानेजर"</string>
-    <string name="app_permissions_summary" msgid="2709819220672938860">"<xliff:g id="APPS">%1$s</xliff:g> प्रयोग गरिरहेका एपहरू"</string>
-    <string name="app_permissions_summary_more" msgid="6247952473615352350">"<xliff:g id="APPS">%1$s</xliff:g> प्रयोग गर्ने एपहरू र थप"</string>
     <string name="tap_to_wake" msgid="3313433536261440068">"सक्रिय पार्न ट्याप गर्नुहोस्"</string>
     <string name="tap_to_wake_summary" msgid="6641039858241611072">"यन्त्र सक्रिय पार्न स्क्रिनको जहाँसुकै दुई पटक ट्याप गर्नुहोस्"</string>
     <string name="domain_urls_title" msgid="7012209752049678876">"लिंकहरू खोल्दा"</string>
@@ -3866,7 +3868,8 @@
     <string name="users_summary" msgid="8473589474976307510">"<xliff:g id="USER_NAME">%1$s</xliff:g> रूपमा साइन इन गरिएको छ"</string>
     <string name="android_version_summary" msgid="7818952662015042768">"अपडेट गरी Android <xliff:g id="VERSION">%1$s</xliff:g> बनाइएको छ"</string>
     <string name="android_version_pending_update_summary" msgid="5404532347171027730">"अद्यावधिक उपलब्ध छ"</string>
-    <string name="disabled_by_policy_title" msgid="3635622338687810583">"तपाईंका IT एड्मिनले ब्लक गर्नुभएको छ"</string>
+    <!-- no translation found for disabled_by_policy_title (6852347040813204503) -->
+    <skip />
     <string name="disabled_by_policy_title_adjust_volume" msgid="1669689058213728099">"भोल्युम परिवर्तन गर्न सकिँदैन"</string>
     <string name="disabled_by_policy_title_outgoing_calls" msgid="400089720689494562">"कल गर्न सकिँदैन"</string>
     <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"SMS म्यासेज पठाउन सकिँदैन"</string>
@@ -3876,7 +3879,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"तपाईंको ऋणदाता कम्पनीले ब्लक गरेको छ"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"अभिभावकको सहमति चाहिन्छ"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"यो फोन सेट अप गर्ने प्रक्रिया सुरु गर्न यो फोन आफ्ना अभिभावकलाई देऊ"</string>
-    <string name="default_admin_support_msg" msgid="8338570262037182531">"तपाईंसँग प्रश्नहरू छन् भने आफ्नो IT प्रशासकलाई सम्पर्क गर्नुहोस्"</string>
+    <!-- no translation found for default_admin_support_msg (8816296554831532033) -->
+    <skip />
     <string name="admin_support_more_info" msgid="8407433155725898290">"थप विवरणहरु"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"तपाईंको प्रशासकले तपाईंको कार्य प्रोफाइलसँग सम्बन्धित एप र डेटाका साथै सेटिङ। अनुमति, संस्थागत पहुँच, नेटवर्क सम्बन्धी गतिविधि र यस डिभाइसको स्थानसम्बन्धी जानकारीको अनुगमन र व्यवस्थापन गर्न सक्छ।"</string>
     <string name="admin_profile_owner_user_message" msgid="4929926887231544950">"तपाईंको प्रशासकले यस प्रयोगकर्तासँग सम्बन्धित एप तथा डेटाका साथै सेटिङ, अनुमति, संस्थागत पहुँच, नेटवर्क सम्बन्धी गतिविधि र यस डिभाइसको स्थानसम्बन्धी जानकारीको अनुगमन र व्यवस्थापन गर्न सक्छ।"</string>
@@ -4707,6 +4711,8 @@
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"\'विकासकर्ता विकल्पहरू\' प्रयोग गरियोस्"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"प्रिन्ट सेवा चलाउनुहोस्"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"एकभन्दा बढी व्यक्तिलाई प्रयोग गर्न दिइयोस्"</string>
+    <!-- no translation found for multiple_users_main_switch_keywords (4845954458094134356) -->
+    <skip />
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"\'वायरलेस डिबगिङ\' सुविधा प्रयोग गरियोस्"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"\'ग्राफिक्स ड्राइभरसम्बन्धी प्राथमिकता\' प्रयोग गर्नुहोस्"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"Night Light प्रयोग गरियोस्"</string>
