--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -1104,7 +1104,8 @@
     <string name="display_white_balance_title" msgid="2624544323029364713">"ਸਫ਼ੈਦ ਸੰਤੁਲਨ ਦਿਖਾਓ"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"ਸਮੂਥ ਡਿਸਪਲੇ"</string>
-    <string name="peak_refresh_rate_summary" msgid="1527087897198455042">"ਸਵੈਚਲਿਤ ਤੌਰ \'ਤੇ ਕੁਝ ਸਮੱਗਰੀਆਂ ਲਈ ਰਿਫ੍ਰੈਸ਼ ਦਰ ਨੂੰ 60 ਤੋਂ ਵਧਾ ਕੇ 90 Hz ਕਰ ਦਿੰਦਾ ਹੈ। ਬੈਟਰੀ ਵਰਤੋਂ ਵੱਧ ਜਾਂਦੀ ਹੈ।"</string>
+    <!-- no translation found for peak_refresh_rate_summary (3627278682437562787) -->
+    <skip />
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"ਉੱਚ ਰਿਫ੍ਰੈਸ਼ ਦਰ ਸੈੱਟ ਕਰੋ"</string>
     <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"ਬਿਹਤਰ ਸਪਰਸ਼ ਪ੍ਰਤੀਕਿਰਿਆ ਅਤੇ ਐਨੀਮੇਸ਼ਨ ਕੁਆਲਿਟੀ ਲਈ ਉੱਚਤਮ ਰਿਫ੍ਰੈਸ਼ ਦਰ। ਬੈਟਰੀ ਵਰਤੋਂ ਵੱਧ ਜਾਂਦੀ ਹੈ।"</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"ਸਕ੍ਰੀਨ ਦਾ ਚੌਕੰਨਾਪਣ"</string>
@@ -1162,6 +1163,8 @@
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"ਬੈੱਡਟਾਈਮ ਮੋਡ ਸੰਬੰਧੀ ਸੈਟਿੰਗਾਂ"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"ਸਕ੍ਰੀਨ ਦੇ ਬੰਦ ਹੋਣ ਦਾ ਸਮਾਂ"</string>
     <string name="screen_timeout_summary" msgid="5558778019594643427">"<xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> ਤੱਕ ਕੋਈ ਸਰਗਰਮੀ ਨਾ ਹੋਣ \'ਤੇ"</string>
+    <!-- no translation found for screen_timeout_summary_not_set (5107680774964178875) -->
+    <skip />
     <string name="wallpaper_settings_title" msgid="5635129851136006383">"ਵਾਲਪੇਪਰ"</string>
     <string name="style_and_wallpaper_settings_title" msgid="2232042809407308946">"ਵਾਲਪੇਪਰ ਅਤੇ ਸਟਾਈਲ"</string>
     <string name="wallpaper_dashboard_summary" msgid="2324472863981057118">"ਹੋਮ, ਲਾਕ ਸਕ੍ਰੀਨ"</string>
@@ -2412,12 +2415,9 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"ਕੋਈ ਸਮਾਂ-ਸੂਚੀ ਸੈੱਟ ਕਰੋ"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"ਬੈਟਰੀ ਲਾਈਫ਼ ਵਧਾਓ"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"ਚਾਰਜ ਹੋਣ \'ਤੇ ਬੰਦ ਕਰੋ"</string>
-    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
-    <skip />
+    <string name="battery_saver_sticky_description_new" product="default" msgid="3618041244703216293">"ਜਦੋਂ ਤੁਹਾਡਾ ਫ਼ੋਨ <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> ਤੋਂ ਵੱਧ ਚਾਰਜ ਹੋ ਜਾਂਦਾ ਹੈ ਤਾਂ ਬੈਟਰੀ ਸੇਵਰ ਮੋਡ ਬੰਦ ਹੋ ਜਾਂਦਾ ਹੈ"</string>
+    <string name="battery_saver_sticky_description_new" product="tablet" msgid="1733686775743601110">"ਜਦੋਂ ਤੁਹਾਡਾ ਟੈਬਲੈੱਟ <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> ਤੋਂ ਵੱਧ ਚਾਰਜ ਹੋ ਜਾਂਦਾ ਹੈ ਤਾਂ ਬੈਟਰੀ ਸੇਵਰ ਮੋਡ ਬੰਦ ਹੋ ਜਾਂਦਾ ਹੈ"</string>
+    <string name="battery_saver_sticky_description_new" product="device" msgid="7449283917787428755">"ਜਦੋਂ ਤੁਹਾਡਾ ਡੀਵਾਈਸ <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> ਤੋਂ ਵੱਧ ਚਾਰਜ ਹੋ ਜਾਂਦਾ ਹੈ ਤਾਂ ਬੈਟਰੀ ਸੇਵਰ ਮੋਡ ਬੰਦ ਹੋ ਜਾਂਦਾ ਹੈ"</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"ਚਾਲੂ ਕਰੋ"</string>
@@ -2849,6 +2849,8 @@
     <string name="remove_guest_on_exit_summary" msgid="3969962695703280353">"ਮਹਿਮਾਨ ਮੋਡ ਤੋਂ ਬਾਹਰ ਜਾਣ \'ਤੇ ਮਹਿਮਾਨ ਦੀਆਂ ਸਾਰੀਆਂ ਐਪਾਂ ਅਤੇ ਡਾਟੇ ਨੂੰ ਮਿਟਾਓ"</string>
     <string name="remove_guest_on_exit_dialog_title" msgid="2310442892536079416">"ਕੀ ਮਹਿਮਾਨ ਦੀ ਸਰਗਰਮੀ ਨੂੰ ਮਿਟਾਉਣਾ ਹੈ?"</string>
     <string name="remove_guest_on_exit_dialog_message" msgid="8112409834021851883">"ਇਸ ਮਹਿਮਾਨ ਸੈਸ਼ਨ ਦੀਆਂ ਐਪਾਂ ਅਤੇ ਡਾਟੇ ਨੂੰ ਹੁਣੇ ਮਿਟਾਇਆ ਜਾਵੇਗਾ ਅਤੇ ਮਹਿਮਾਨ ਦੀ ਸਾਰੀ ਭਵਿੱਖੀ ਸਰਗਰਮੀ ਨੂੰ ਤੁਹਾਡੇ ਮਹਿਮਾਨ ਮੋਡ ਤੋਂ ਬਾਹਰ ਜਾਣ \'ਤੇ ਹਰ ਵਾਰ ਮਿਟਾਇਆ ਜਾਵੇਗਾ"</string>
+    <!-- no translation found for remove_guest_on_exit_keywords (4961310523576166193) -->
+    <skip />
     <string name="enable_guest_calling" msgid="8300355036005240911">"ਮਹਿਮਾਨ ਨੂੰ ਫ਼ੋਨ ਵਰਤਣ ਦਾ ਆਗਿਆ ਦਿਓ"</string>
     <string name="enable_guest_calling_summary" msgid="4748224917641204782">"ਕਾਲ ਇਤਿਹਾਸ ਨੂੰ ਮਹਿਮਾਨ ਵਰਤੋਂਕਾਰ ਨਾਲ ਸਾਂਝਾ ਕੀਤਾ ਜਾਵੇਗਾ"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"ਫ਼ੋਨ ਕਾਲਾਂ ਅਤੇ SMS ਚਾਲੂ ਕਰੋ"</string>
@@ -3112,6 +3114,8 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"ਕਾਲ ਦੀ ਅਵਾਜ਼"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"ਅਲਾਰਮ ਦੀ ਅਵਾਜ਼"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"ਘੰਟੀ ਅਤੇ ਸੂਚਨਾ ਦੀ ਅਵਾਜ਼"</string>
+    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
+    <skip />
     <string name="notification_volume_option_title" msgid="4838818791683615978">"ਸੂਚਨਾ ਵੌਲਿਊਮ"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"ਫ਼ੋਨ ਰਿੰਗਟੋਨ"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"ਪੂਰਵ-ਨਿਰਧਾਰਿਤ ਸੂਚਨਾ ਧੁਨੀ"</string>
@@ -3703,8 +3707,6 @@
     <string name="filter_notif_blocked_apps" msgid="1065653868850012325">"ਬੰਦ ਕੀਤੀਆਂ ਗਈਆਂ"</string>
     <string name="advanced_apps" msgid="7643010673326578815">"ਅਡਵਾਂਸ"</string>
     <string name="app_permissions" msgid="8666537659217653626">"ਇਜਾਜ਼ਤ ਪ੍ਰਬੰਧਕ"</string>
-    <string name="app_permissions_summary" msgid="2709819220672938860">"<xliff:g id="APPS">%1$s</xliff:g> ਦੀ ਵਰਤੋਂ ਕਰ ਰਹੀਆਂ ਐਪਾਂ"</string>
-    <string name="app_permissions_summary_more" msgid="6247952473615352350">"<xliff:g id="APPS">%1$s</xliff:g> ਵਰਤਣ ਵਾਲੀਆਂ ਐਪਾਂ, ਅਤੇ ਹੋਰ"</string>
     <string name="tap_to_wake" msgid="3313433536261440068">"ਕਿਰਿਆਸ਼ੀਲ ਲਈ ਟੈਪ ਕਰੋ"</string>
     <string name="tap_to_wake_summary" msgid="6641039858241611072">"ਡੀਵਾਈਸ ਨੂੰ ਕਿਰਿਆਸ਼ੀਲ ਲਈ ਸਕ੍ਰੀਨ \'ਤੇ ਕਿੱਥੇ ਵੀ ਦੋ ਵਾਰ ਟੈਪ ਕਰੋ"</string>
     <string name="domain_urls_title" msgid="7012209752049678876">"ਖੁੱਲ੍ਹਣ ਵਾਲੇ ਲਿੰਕ"</string>
@@ -3866,7 +3868,8 @@
     <string name="users_summary" msgid="8473589474976307510">"<xliff:g id="USER_NAME">%1$s</xliff:g> ਵਜੋਂ ਸਾਈਨ ਇਨ ਕੀਤਾ ਗਿਆ"</string>
     <string name="android_version_summary" msgid="7818952662015042768">"ਅੱਪਡੇਟ ਕਰਕੇ Android <xliff:g id="VERSION">%1$s</xliff:g> ਕੀਤਾ ਗਿਆ"</string>
     <string name="android_version_pending_update_summary" msgid="5404532347171027730">"ਅੱਪਡੇਟ ਉਪਲਬਧ ਹੈ"</string>
-    <string name="disabled_by_policy_title" msgid="3635622338687810583">"ਤੁਹਾਡੇ ਆਈ.ਟੀ. ਪ੍ਰਸ਼ਾਸਕ ਵੱਲੋਂ ਬਲਾਕ ਕੀਤਾ ਗਿਆ"</string>
+    <!-- no translation found for disabled_by_policy_title (6852347040813204503) -->
+    <skip />
     <string name="disabled_by_policy_title_adjust_volume" msgid="1669689058213728099">"ਤੁਸੀਂ ਅਵਾਜ਼ ਨੂੰ ਬਦਲ ਨਹੀਂ ਸਕਦੇ"</string>
     <string name="disabled_by_policy_title_outgoing_calls" msgid="400089720689494562">"ਕਾਲਾਂ ਨਹੀਂ ਕਰ ਸਕਦੇ"</string>
     <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"SMS ਸੁਨੇਹੇ ਨਹੀਂ ਭੇਜ ਸਕਦੇ"</string>
@@ -3876,7 +3879,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"ਤੁਹਾਡੇ ਕ੍ਰੈਡਿਟ ਪ੍ਰਦਾਨਕ ਵੱਲੋਂ ਬਲਾਕ ਕੀਤੀ ਗਈ"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"ਮਾਂ-ਪਿਓ ਦੀ ਲੋੜ ਹੈ"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"ਇਸਦੀ ਸੈਟਿੰਗ ਦੀ ਸ਼ੁਰੂਆਤ ਕਰਨ ਲਈ ਫ਼ੋਨ ਨੂੰ ਆਪਣੇ ਮਾਂ-ਪਿਓ ਦੇ ਹਵਾਲੇ ਕਰੋ"</string>
-    <string name="default_admin_support_msg" msgid="8338570262037182531">"ਜੇਕਰ ਤੁਹਾਡੇ ਕੋਈ ਸਵਾਲ ਹਨ, ਤਾਂ ਆਪਣੇ ਆਈ.ਟੀ. ਪ੍ਰਸ਼ਾਸਕ ਨਾਲ ਸੰਪਰਕ ਕਰੋ"</string>
+    <!-- no translation found for default_admin_support_msg (8816296554831532033) -->
+    <skip />
     <string name="admin_support_more_info" msgid="8407433155725898290">"ਹੋਰ ਵੇਰਵੇ"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"ਤੁਹਾਡਾ ਪ੍ਰਸ਼ਾਸਕ ਸੈਟਿੰਗਾਂ, ਇਜਾਜ਼ਤਾਂ, ਕਾਰਪੋਰੇਟ ਪਹੁੰਚ, ਨੈੱਟਵਰਕ ਸਰਗਰਮੀ, ਅਤੇ ਡੀਵਾਈਸ ਦੀ ਟਿਕਾਣਾ ਜਾਣਕਾਰੀ ਸਮੇਤ ਤੁਹਾਡੇ ਕਾਰਜ ਪ੍ਰੋਫਾਈਲ ਨਾਲ ਸਬੰਧਿਤ ਐਪਾਂ ਅਤੇ ਡਾਟੇ ਦੀ ਨਿਗਰਾਨੀ ਅਤੇ ਪ੍ਰਬੰਧਨ ਕਰ ਸਕਦਾ ਹੈ।"</string>
     <string name="admin_profile_owner_user_message" msgid="4929926887231544950">"ਤੁਹਾਡਾ ਪ੍ਰਸ਼ਾਸਕ ਸੈਟਿੰਗਾਂ, ਇਜਾਜ਼ਤਾਂ, ਕਾਰਪੋਰੇਟ ਪਹੁੰਚ, ਨੈੱਟਵਰਕ ਸਰਗਰਮੀ, ਅਤੇ ਡੀਵਾਈਸ ਦੀ ਟਿਕਾਣਾ ਜਾਣਕਾਰੀ ਸਮੇਤ ਇਸ ਵਰਤੋਂਕਾਰ ਨਾਲ ਸਬੰਧਿਤ ਐਪਾਂ ਅਤੇ ਡਾਟੇ ਦੀ ਨਿਗਰਾਨੀ ਅਤੇ ਪ੍ਰਬੰਧਨ ਕਰ ਸਕਦਾ ਹੈ।"</string>
@@ -4707,6 +4711,8 @@
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"ਵਿਕਾਸਕਾਰ ਚੋਣਾਂ ਵਰਤੋ"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"ਪ੍ਰਿੰਟ ਸੇਵਾ ਵਰਤੋ"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"ਇੱਕ ਤੋਂ ਵੱਧ ਵਰਤੋਂਕਾਰਾਂ ਨੂੰ ਆਗਿਆ ਦਿਓ"</string>
+    <!-- no translation found for multiple_users_main_switch_keywords (4845954458094134356) -->
+    <skip />
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"ਵਾਇਰਲੈੱਸ ਡੀਬੱਗਿੰਗ ਵਰਤੋ"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"ਗ੍ਰਾਫ਼ਿਕ ਡਰਾਈਵਰ ਤਰਜੀਹਾਂ ਵਰਤੋ"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"\'ਰਾਤ ਦੀ ਰੋਸ਼ਨੀ\' ਵਰਤੋ"</string>
