--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -1104,7 +1104,8 @@
     <string name="display_white_balance_title" msgid="2624544323029364713">"සුදු සමබරතාව සංදර්ශන කරන්න"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"සුමට සංදර්ශකය"</string>
-    <string name="peak_refresh_rate_summary" msgid="1527087897198455042">"සමහර අන්තර්ගත සඳහා නැවුම් කිරීමේ අනුපාතය හර්ට්ස් 60 සිට 90 දක්වා ස්වයංක්‍රියව ඉහළ නංවයි. බැටරි භාවිතය වැඩි කරයි."</string>
+    <!-- no translation found for peak_refresh_rate_summary (3627278682437562787) -->
+    <skip />
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"කාර්යබහුල යළි නැවුම් කිරීමේ අනුපාතය බල කරන්න"</string>
     <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"වැඩි දියුණු කළ ස්පර්ශ ප්‍රතිචාර සඳහා ඉහළම යළි නැවුම් කිරීමේ අනුපාතය සහ සජීවිකරණ ගුණාත්මකභාවය. බැටරි භාවිතය වැඩි කරයි."</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"තිර අවධානය"</string>
@@ -1162,6 +1163,8 @@
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"නින්දට යන වේලාවේ ප්‍රකාර සැකසීම්"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"තිර කල් ඉකුත්වීම"</string>
     <string name="screen_timeout_summary" msgid="5558778019594643427">"අක්‍රියතාවයෙන් <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> පසු"</string>
+    <!-- no translation found for screen_timeout_summary_not_set (5107680774964178875) -->
+    <skip />
     <string name="wallpaper_settings_title" msgid="5635129851136006383">"වෝල්පේපරය"</string>
     <string name="style_and_wallpaper_settings_title" msgid="2232042809407308946">"වෝල්පේපරය සහ මෝස්තරය"</string>
     <string name="wallpaper_dashboard_summary" msgid="2324472863981057118">"මුල් පිටුව, අගුලු තිරය"</string>
@@ -2412,12 +2415,9 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"කාලසටහනක් සකසන්න"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"බැටරි ආයු කාලය දීර්ඝ කරන්න"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"ආරෝපණය වූ විට ක්‍රියාවිරහිත කරන්න"</string>
-    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
-    <skip />
+    <string name="battery_saver_sticky_description_new" product="default" msgid="3618041244703216293">"ඔබේ දුරකථනය <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>ට වඩා වැඩියෙන් ආරෝපණය වූ විට බැටරි සුරැකුම ක්‍රියාවිරහිත වෙයි"</string>
+    <string name="battery_saver_sticky_description_new" product="tablet" msgid="1733686775743601110">"ඔබේ ටැබ්ලටය <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>ට වඩා වැඩියෙන් ආරෝපණය වූ විට බැටරි සුරැකුම ක්‍රියාවිරහිත වෙයි"</string>
+    <string name="battery_saver_sticky_description_new" product="device" msgid="7449283917787428755">"ඔබේ උපාංගය <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>ට වඩා වැඩියෙන් ආරෝපණය වූ විට බැටරි සුරැකුම ක්‍රියාවිරහිත වෙයි"</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"ක්‍රියාත්මක කරන්න"</string>
@@ -2849,6 +2849,8 @@
     <string name="remove_guest_on_exit_summary" msgid="3969962695703280353">"ආගන්තුක ප්‍රකාරයෙන් පිටවන විට සියලු ආගන්තුක යෙදුම් සහ දත්ත මකන්න"</string>
     <string name="remove_guest_on_exit_dialog_title" msgid="2310442892536079416">"ආගන්තුක ක්‍රියාකාරකම මකන්නද?"</string>
     <string name="remove_guest_on_exit_dialog_message" msgid="8112409834021851883">"මෙම ආගන්තුක සැසියේ යෙදුම් සහ දත්ත දැන් මකනු ඇති අතර, ඔබ ආගන්තුක ප්‍රකාරයෙන් පිටවන සෑම අවස්ථාවකම අනාගත ආගන්තුකයන්ගේ ක්‍රියාකාරකම් සියල්ල මකනු ඇත"</string>
+    <!-- no translation found for remove_guest_on_exit_keywords (4961310523576166193) -->
+    <skip />
     <string name="enable_guest_calling" msgid="8300355036005240911">"අමුත්තාට දුරකථනය භාවිත කිරීමට ඉඩ දෙන්න"</string>
     <string name="enable_guest_calling_summary" msgid="4748224917641204782">"ඇමතුම් ඉතිහාසය අමුත්තා සමග බෙදා ගැනේ"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"දුරකථන ඇමතුම් සහ SMS ක්‍රියාත්මක කරන්න?"</string>
@@ -3112,6 +3114,8 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"ඇමතුම් ශබ්දය ත්‍රීවතාවය"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"සීනුවේ ශබ්දය"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"නාද සහ දැනුම්දීම හඬ"</string>
+    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
+    <skip />
     <string name="notification_volume_option_title" msgid="4838818791683615978">"දැනුම්දීමේ ශබ්ද ත්‍රීවතාව"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"දුරකථන රිගින්ටෝනය"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"පෙරනිමි දැනුම්දීම් හඬ"</string>
@@ -3703,8 +3707,6 @@
     <string name="filter_notif_blocked_apps" msgid="1065653868850012325">"ක්‍රියාවිරහිතයි"</string>
     <string name="advanced_apps" msgid="7643010673326578815">"උසස්"</string>
     <string name="app_permissions" msgid="8666537659217653626">"අවසර කළමනාකරු"</string>
-    <string name="app_permissions_summary" msgid="2709819220672938860">"<xliff:g id="APPS">%1$s</xliff:g> භාවිතා කරන යෙදුම්"</string>
-    <string name="app_permissions_summary_more" msgid="6247952473615352350">"<xliff:g id="APPS">%1$s</xliff:g> සහ තවත් දේවල් භාවිත කරන යෙදුම්"</string>
     <string name="tap_to_wake" msgid="3313433536261440068">"අවදි කිරීමට තට්ටු කරන්න"</string>
     <string name="tap_to_wake_summary" msgid="6641039858241611072">"උපාංගය අවදි කිරීමට තිරයේ ඕනෑම තැනක මත දෙපාරක් තට්ටු කරන්න"</string>
     <string name="domain_urls_title" msgid="7012209752049678876">"සබැඳි විවෘත කිරීම"</string>
@@ -3866,7 +3868,8 @@
     <string name="users_summary" msgid="8473589474976307510">"<xliff:g id="USER_NAME">%1$s</xliff:g> ලෙස පුරන ලදී"</string>
     <string name="android_version_summary" msgid="7818952662015042768">"Android <xliff:g id="VERSION">%1$s</xliff:g> වෙත යාවත්කාලීන කරන ලදි"</string>
     <string name="android_version_pending_update_summary" msgid="5404532347171027730">"යාවත්කාලීනයක් ඇත"</string>
-    <string name="disabled_by_policy_title" msgid="3635622338687810583">"ඔබගේ IT පරිපාලක විසින් අවහිර කර ඇත"</string>
+    <!-- no translation found for disabled_by_policy_title (6852347040813204503) -->
+    <skip />
     <string name="disabled_by_policy_title_adjust_volume" msgid="1669689058213728099">"හඬ වෙනස් කළ නොහැකිය"</string>
     <string name="disabled_by_policy_title_outgoing_calls" msgid="400089720689494562">"ඇමතුම් සිදු කළ නොහැකිය"</string>
     <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"SMS පණිවිඩ යැවිය නොහැකිය"</string>
@@ -3876,7 +3879,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"ඔබගේ ණය සැපයුම්කරු විසින් අවහිර කරන ලදි."</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"මාපියකු අවශ්‍යයි"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"මෙය පිහිටුවීම ආරම්භ කිරීම සඳහා දුරකථනය ඔබගේ මාපියන්ගෙන් කෙනෙකුට භාර දෙන්න"</string>
-    <string name="default_admin_support_msg" msgid="8338570262037182531">"ඔබට ප්‍රශ්න තිබේ නම්, ඔබේ IT පරිපාලක අමතන්න."</string>
+    <!-- no translation found for default_admin_support_msg (8816296554831532033) -->
+    <skip />
     <string name="admin_support_more_info" msgid="8407433155725898290">"වැඩි විස්තර"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"සැකසීම්, අවසර, සංස්ථාපිත ප්‍රවේශය, ජාල ක්‍රියාකාරකම, සහ උපාංගයේ ස්ථාන තොරතුරු ඇතුළුව, ඔබේ කාර්යාල පැතිකඩ සමඟ සම්බන්ධිත යෙදුම් සහ දත්ත නිරීක්ෂණය කිරීමට සහ කළමනාකරණය කිරීමට ඔබේ පරිපාලකට හැකිය."</string>
     <string name="admin_profile_owner_user_message" msgid="4929926887231544950">"සැකසීම්, අවසර, සංස්ථාපිත ප්‍රවේශය, ජාල ක්‍රියාකාරකම, සහ උපාංගයේ ස්ථාන තොරතුරු ඇතුළුව, මෙම පරිශීලකයා සමඟ සම්බන්ධිත යෙදුම් සහ දත්ත නිරීක්ෂණය කිරීමට සහ කළමනාකරණය කිරීමට ඔබේ පරිපාලකට හැකිය."</string>
@@ -4707,6 +4711,8 @@
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"සංවර්ධක විකල්ප භාවිත කරන්න"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"මුද්‍රණ සේවාව භාවිත කරන්න"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"බහු පරිශීලකයින්ට ඉඩ දෙන්න"</string>
+    <!-- no translation found for multiple_users_main_switch_keywords (4845954458094134356) -->
+    <skip />
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"රැහැන් රහිත නිදොස්කරණය භාවිත කරන්න"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"චිත්‍රක ධාවක මනාප භාවිත කරන්න"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"රාත්‍රී ආලෝකය භාවිත කරන්න"</string>
