--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -1104,7 +1104,8 @@
     <string name="display_white_balance_title" msgid="2624544323029364713">"White balance ng display"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"Smooth na Display"</string>
-    <string name="peak_refresh_rate_summary" msgid="1527087897198455042">"Awtomatikong itinataas sa 90 Hz mula sa 60 Hz ang refresh rate para sa ilang content. Mas lumalakas ang paggamit ng baterya."</string>
+    <!-- no translation found for peak_refresh_rate_summary (3627278682437562787) -->
+    <skip />
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"Puwersahin sa pinakamataas na rate ng pag-refresh"</string>
     <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"Pinakamataas na rate ng pag-refresh para sa pinahusay na pagiging responsive ng pagpindot at kalidad ng animation. Pinapalakas ang paggamit ng baterya."</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"Atensyon sa screen"</string>
@@ -1162,6 +1163,7 @@
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"Mga setting ng Bedtime mode"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"Timeout ng screen"</string>
     <string name="screen_timeout_summary" msgid="5558778019594643427">"Pagkatapos ng <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> ng kawalan ng aktibidad"</string>
+    <string name="screen_timeout_summary_not_set" msgid="5107680774964178875">"Hindi nakatakda"</string>
     <string name="wallpaper_settings_title" msgid="5635129851136006383">"Wallpaper"</string>
     <string name="style_and_wallpaper_settings_title" msgid="2232042809407308946">"Wallpaper &amp; istilo"</string>
     <string name="wallpaper_dashboard_summary" msgid="2324472863981057118">"Home, lock screen"</string>
@@ -2412,12 +2414,9 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Magtakda ng iskedyul"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Patagalin ang baterya"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"I-off kapag naka-charge"</string>
-    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
-    <skip />
+    <string name="battery_saver_sticky_description_new" product="default" msgid="3618041244703216293">"Mag-o-off ang Pantipid ng Baterya kapag lampas <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> na ang charge ng iyong telepono"</string>
+    <string name="battery_saver_sticky_description_new" product="tablet" msgid="1733686775743601110">"Mag-o-off ang Pantipid ng Baterya kapag lampas <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> na ang charge ng iyong tablet"</string>
+    <string name="battery_saver_sticky_description_new" product="device" msgid="7449283917787428755">"Mag-o-off ang Pantipid ng Baterya kapag lampas <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> na ang charge ng iyong device"</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"I-on"</string>
@@ -2849,6 +2848,8 @@
     <string name="remove_guest_on_exit_summary" msgid="3969962695703280353">"I-delete ang lahat ng app at data ng bisita kapag umaalis sa guest mode"</string>
     <string name="remove_guest_on_exit_dialog_title" msgid="2310442892536079416">"I-delete ang aktibidad ng bisita?"</string>
     <string name="remove_guest_on_exit_dialog_message" msgid="8112409834021851883">"Made-delete na ngayon ang mga app at data mula sa session na ito ng bisita, at made-delete ang lahat ng aktibidad ng bisita sa hinaharap sa tuwing aalis ka ng guest mode"</string>
+    <!-- no translation found for remove_guest_on_exit_keywords (4961310523576166193) -->
+    <skip />
     <string name="enable_guest_calling" msgid="8300355036005240911">"Payagang gamitin ng bisita ang telepono"</string>
     <string name="enable_guest_calling_summary" msgid="4748224917641204782">"Ibabahagi sa bisitang user ang history ng tawag"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"I-on ang mga pagtawag sa telepono at SMS"</string>
@@ -3112,6 +3113,8 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"Volume ng tawag"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"Volume ng alarm"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"Volume ng pag-ring at notification"</string>
+    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
+    <skip />
     <string name="notification_volume_option_title" msgid="4838818791683615978">"Volume ng notification"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"Ringtone ng telepono"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"Default na notification sound"</string>
@@ -3703,8 +3706,6 @@
     <string name="filter_notif_blocked_apps" msgid="1065653868850012325">"Naka-off"</string>
     <string name="advanced_apps" msgid="7643010673326578815">"Advanced"</string>
     <string name="app_permissions" msgid="8666537659217653626">"Manager ng pahintulot"</string>
-    <string name="app_permissions_summary" msgid="2709819220672938860">"Mga app na gumagamit ng <xliff:g id="APPS">%1$s</xliff:g>"</string>
-    <string name="app_permissions_summary_more" msgid="6247952473615352350">"Mga app na gumagamit sa <xliff:g id="APPS">%1$s</xliff:g>, at iba pa"</string>
     <string name="tap_to_wake" msgid="3313433536261440068">"I-tap upang paganahin"</string>
     <string name="tap_to_wake_summary" msgid="6641039858241611072">"Mag-double tap kahit saan sa screen upang paganahin ang device"</string>
     <string name="domain_urls_title" msgid="7012209752049678876">"Pagbubukas ng mga link"</string>
@@ -3866,7 +3867,8 @@
     <string name="users_summary" msgid="8473589474976307510">"Naka-sign in bilang <xliff:g id="USER_NAME">%1$s</xliff:g>"</string>
     <string name="android_version_summary" msgid="7818952662015042768">"Na-update sa Android <xliff:g id="VERSION">%1$s</xliff:g>"</string>
     <string name="android_version_pending_update_summary" msgid="5404532347171027730">"May available na update"</string>
-    <string name="disabled_by_policy_title" msgid="3635622338687810583">"Na-block ng iyong IT admin"</string>
+    <!-- no translation found for disabled_by_policy_title (6852347040813204503) -->
+    <skip />
     <string name="disabled_by_policy_title_adjust_volume" msgid="1669689058213728099">"Hindi mababago ang volume"</string>
     <string name="disabled_by_policy_title_outgoing_calls" msgid="400089720689494562">"Hindi makakatawag"</string>
     <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"Hindi makakapagpadala ng mga SMS message"</string>
@@ -3876,7 +3878,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Na-block ng iyong credit provider"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Kinakailangan ang magulang"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Ibigay ang telepono sa iyong magulang para simulan ang pag-set up dito"</string>
-    <string name="default_admin_support_msg" msgid="8338570262037182531">"Kung mayroon kang mga tanong, makipag-ugnayan sa iyong IT admin"</string>
+    <!-- no translation found for default_admin_support_msg (8816296554831532033) -->
+    <skip />
     <string name="admin_support_more_info" msgid="8407433155725898290">"Higit pang mga detalye"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Masusubaybayan at mapamamahalaan ng iyong admin ang mga app at data na nauugnay sa iyong profile sa trabaho, kabilang ang mga setting, pahintulot, access ng kumpanya, aktibidad ng network, at impormasyon ng lokasyon ng device."</string>
     <string name="admin_profile_owner_user_message" msgid="4929926887231544950">"Masusubaybayan at mapamamahalaan ng iyong admin ang mga app at data na nauugnay sa user na ito, kabilang ang mga setting, pahintulot, access ng kumpanya, aktibidad ng network, at impormasyon ng lokasyon ng device."</string>
@@ -4707,6 +4710,8 @@
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Gamitin ang mga opsyon ng developer"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Gamitin ang serbisyo ng pag-print"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Payagan ang maraming user"</string>
+    <!-- no translation found for multiple_users_main_switch_keywords (4845954458094134356) -->
+    <skip />
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Gamitin ang wireless na pag-debug"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Gamitin ang mga kagustuhan sa graphics driver"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"Gamitin ang Night Light"</string>
