--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -1104,7 +1104,8 @@
     <string name="display_white_balance_title" msgid="2624544323029364713">"Mostra el balanç de blancs"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"Smooth Display"</string>
-    <string name="peak_refresh_rate_summary" msgid="1527087897198455042">"Augmenta automàticament la freqüència d\'actualització de 60 a 90 Hz en alguns continguts. Augmenta l\'ús de la bateria."</string>
+    <!-- no translation found for peak_refresh_rate_summary (3627278682437562787) -->
+    <skip />
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"Força la freqüència d\'actualització màxima"</string>
     <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"La freqüència d\'actualització més alta millora la resposta al tacte i la qualitat de les animacions. Augmenta l\'ús de la bateria."</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"Atenció a la pantalla"</string>
@@ -1162,6 +1163,8 @@
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"Configuració del mode Hora de dormir"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"Temps d\'espera de la pantalla"</string>
     <string name="screen_timeout_summary" msgid="5558778019594643427">"<xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> d\'inactivitat"</string>
+    <!-- no translation found for screen_timeout_summary_not_set (5107680774964178875) -->
+    <skip />
     <string name="wallpaper_settings_title" msgid="5635129851136006383">"Fons de pantalla"</string>
     <string name="style_and_wallpaper_settings_title" msgid="2232042809407308946">"Estil i fons de pantalla"</string>
     <string name="wallpaper_dashboard_summary" msgid="2324472863981057118">"Inici, pantalla de bloqueig"</string>
@@ -2287,7 +2290,7 @@
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Major consum de bateria"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Mostra les aplicacions que més bateria utilitzen"</string>
     <string name="battery_tip_limited_temporarily_title" msgid="5962767837251276527">"La càrrega s\'ha posat en pausa"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="5254922316684499816">"S\'està protegint la bateria per allargar-ne la durada"</string>
+    <string name="battery_tip_limited_temporarily_summary" msgid="5254922316684499816">"S\'està protegint la bateria per allargar-ne la vida útil"</string>
     <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
     <skip />
     <string name="battery_tip_limited_temporarily_sec_button_content_description" msgid="5648444926736883551">"Més informació sobre la càrrega en pausa"</string>
@@ -2412,12 +2415,9 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Defineix una programació"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Allarga la durada de la bateria"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Desactiva quan estigui carregada"</string>
-    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
-    <skip />
+    <string name="battery_saver_sticky_description_new" product="default" msgid="3618041244703216293">"Estalvi de bateria es desactiva quan el telèfon té més d\'un <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> de bateria"</string>
+    <string name="battery_saver_sticky_description_new" product="tablet" msgid="1733686775743601110">"Estalvi de bateria es desactiva quan la tauleta té més d\'un <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> de bateria"</string>
+    <string name="battery_saver_sticky_description_new" product="device" msgid="7449283917787428755">"Estalvi de bateria es desactiva quan el dispositiu té més d\'un <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> de bateria"</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Activa"</string>
@@ -2849,6 +2849,8 @@
     <string name="remove_guest_on_exit_summary" msgid="3969962695703280353">"Suprimeix totes les aplicacions i dades de la sessió de convidat en sortir d\'aquest mode"</string>
     <string name="remove_guest_on_exit_dialog_title" msgid="2310442892536079416">"Suprimir l\'activitat de convidat?"</string>
     <string name="remove_guest_on_exit_dialog_message" msgid="8112409834021851883">"Les aplicacions i les dades d\'aquesta sessió de convidat se suprimiran ara, i tota l\'activitat de convidat que facis en el futur se suprimirà cada vegada que surtis del mode de convidat"</string>
+    <!-- no translation found for remove_guest_on_exit_keywords (4961310523576166193) -->
+    <skip />
     <string name="enable_guest_calling" msgid="8300355036005240911">"Permet al convidat que utilitzi el telèfon"</string>
     <string name="enable_guest_calling_summary" msgid="4748224917641204782">"L\'historial de trucades es compartirà amb l\'usuari convidat"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"Activa les trucades telefòniques i els SMS"</string>
@@ -3112,6 +3114,8 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"Volum de trucada"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"Volum d\'alarma"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"Volum de sons i notificacions"</string>
+    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
+    <skip />
     <string name="notification_volume_option_title" msgid="4838818791683615978">"Volum de notificació"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"So de trucada del telèfon"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"So de notificació predeterminat"</string>
@@ -3703,8 +3707,6 @@
     <string name="filter_notif_blocked_apps" msgid="1065653868850012325">"Desactivades"</string>
     <string name="advanced_apps" msgid="7643010673326578815">"Configuració avançada"</string>
     <string name="app_permissions" msgid="8666537659217653626">"Gestor de permisos"</string>
-    <string name="app_permissions_summary" msgid="2709819220672938860">"Aplicacions que utilitzen <xliff:g id="APPS">%1$s</xliff:g>"</string>
-    <string name="app_permissions_summary_more" msgid="6247952473615352350">"Aplicacions que utilitzen <xliff:g id="APPS">%1$s</xliff:g> i més"</string>
     <string name="tap_to_wake" msgid="3313433536261440068">"Toca per activar"</string>
     <string name="tap_to_wake_summary" msgid="6641039858241611072">"Toca dos cops un punt de la pantalla per activar el dispositiu"</string>
     <string name="domain_urls_title" msgid="7012209752049678876">"Obertura d\'enllaços"</string>
@@ -3866,7 +3868,8 @@
     <string name="users_summary" msgid="8473589474976307510">"Sessió iniciada com a <xliff:g id="USER_NAME">%1$s</xliff:g>"</string>
     <string name="android_version_summary" msgid="7818952662015042768">"Actualitzat a Android <xliff:g id="VERSION">%1$s</xliff:g>"</string>
     <string name="android_version_pending_update_summary" msgid="5404532347171027730">"Actualització disponible"</string>
-    <string name="disabled_by_policy_title" msgid="3635622338687810583">"Bloquejat per l\'administrador de TI"</string>
+    <!-- no translation found for disabled_by_policy_title (6852347040813204503) -->
+    <skip />
     <string name="disabled_by_policy_title_adjust_volume" msgid="1669689058213728099">"No es pot canviar el volum"</string>
     <string name="disabled_by_policy_title_outgoing_calls" msgid="400089720689494562">"No es poden fer trucades"</string>
     <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"No es poden enviar missatges SMS"</string>
@@ -3876,7 +3879,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Bloquejat per la teva entitat de crèdit"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Es necessita el pare o la mare"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Dona el telèfon als pares perquè comencin a configurar-lo"</string>
-    <string name="default_admin_support_msg" msgid="8338570262037182531">"Si tens cap dubte, contacta amb l\'administrador de TI"</string>
+    <!-- no translation found for default_admin_support_msg (8816296554831532033) -->
+    <skip />
     <string name="admin_support_more_info" msgid="8407433155725898290">"Més informació"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"L\'administrador pot supervisar i gestionar les aplicacions i les dades associades al teu perfil de treball, com ara la configuració, els permisos, l\'accés corporatiu, l\'activitat de xarxa i la informació d\'ubicació del dispositiu."</string>
     <string name="admin_profile_owner_user_message" msgid="4929926887231544950">"L\'administrador pot supervisar i gestionar les aplicacions i les dades associades a aquest usuari, com ara la configuració, els permisos, l\'accés corporatiu, l\'activitat de xarxa i la informació d\'ubicació del dispositiu."</string>
@@ -4707,6 +4711,8 @@
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Utilitza les opcions per a desenvolupadors"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Utilitza el servei d\'impressió"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Permet diversos usuaris"</string>
+    <!-- no translation found for multiple_users_main_switch_keywords (4845954458094134356) -->
+    <skip />
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Utilitza la depuració sense fil"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Utilitza les preferències del controlador de gràfics"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"Utilitza la funció Llum nocturna"</string>
