--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -1104,7 +1104,8 @@
     <string name="display_white_balance_title" msgid="2624544323029364713">"Εμφάνιση ισορροπίας λευκού"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"Smooth Display"</string>
-    <string name="peak_refresh_rate_summary" msgid="1527087897198455042">"Αυξάνει αυτόματα τον ρυθμό ανανέωσης από τα 60 στα 90 Hz για ορισμένο περιεχόμενο. Αυξάνει τη χρήση της μπαταρίας."</string>
+    <!-- no translation found for peak_refresh_rate_summary (3627278682437562787) -->
+    <skip />
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"Επιβολή μέγιστου ρυθμού ανανέωσης"</string>
     <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"Ο υψηλότερος δυνατός ρυθμός ανανέωσης για βελτιωμένη απόκριση αφής και ποιότητα κινούμενων εικόνων. Αυξάνει τη χρήση της μπαταρίας."</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"Παρακολούθηση οθόνης"</string>
@@ -1162,6 +1163,7 @@
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"Ρυθμίσεις λειτουργίας Ώρα για ύπνο"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"Λήξη χρονικού ορίου οθόνης"</string>
     <string name="screen_timeout_summary" msgid="5558778019594643427">"Μετά από <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> αδράνειας"</string>
+    <string name="screen_timeout_summary_not_set" msgid="5107680774964178875">"Δεν έχει οριστεί"</string>
     <string name="wallpaper_settings_title" msgid="5635129851136006383">"Ταπετσαρία"</string>
     <string name="style_and_wallpaper_settings_title" msgid="2232042809407308946">"Ταπετσαρία και στιλ"</string>
     <string name="wallpaper_dashboard_summary" msgid="2324472863981057118">"Αρχική οθόνη, οθόνη κλειδώματος"</string>
@@ -2412,12 +2414,9 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Ορίστε ένα πρόγραμμα"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Επέκταση διάρκειας ζωής της μπαταρίας"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Απενεργοποίηση όταν είναι φορτισμένη"</string>
-    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
-    <skip />
+    <string name="battery_saver_sticky_description_new" product="default" msgid="3618041244703216293">"Η Εξοικονόμηση μπαταρίας απενεργοποιείται όταν το επίπεδο φόρτισης της μπαταρίας του τηλεφώνου σας είναι πάνω από <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>."</string>
+    <string name="battery_saver_sticky_description_new" product="tablet" msgid="1733686775743601110">"Η Εξοικονόμηση μπαταρίας απενεργοποιείται όταν το επίπεδο φόρτισης της μπαταρίας του tablet σας είναι πάνω από <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>."</string>
+    <string name="battery_saver_sticky_description_new" product="device" msgid="7449283917787428755">"Η Εξοικονόμηση μπαταρίας απενεργοποιείται όταν το επίπεδο φόρτισης της μπαταρίας της συσκευής σας είναι πάνω από <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>."</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Ενεργοποίηση"</string>
@@ -2849,6 +2848,8 @@
     <string name="remove_guest_on_exit_summary" msgid="3969962695703280353">"Διαγραφή όλων των εφαρμογών και των δεδομένων επισκέπτη κατά την έξοδο από τη λειτουργία επισκέπτη"</string>
     <string name="remove_guest_on_exit_dialog_title" msgid="2310442892536079416">"Διαγραφή δραστηριότητας επισκέπτη;"</string>
     <string name="remove_guest_on_exit_dialog_message" msgid="8112409834021851883">"Οι εφαρμογές και τα δεδομένα από αυτήν την περίοδο σύνδεσης επισκέπτη θα διαγραφούν τώρα και όλη η μελλοντική δραστηριότητα επισκέπτη θα διαγράφεται κάθε φορά που εξέρχεστε από τη λειτουργία επισκέπτη"</string>
+    <!-- no translation found for remove_guest_on_exit_keywords (4961310523576166193) -->
+    <skip />
     <string name="enable_guest_calling" msgid="8300355036005240911">"Αποδοχή χρήσης τηλεφ. από προσκεκλημένο"</string>
     <string name="enable_guest_calling_summary" msgid="4748224917641204782">"Το ιστορικό κλήσεων θα κοινοποιηθεί στον προσκεκλημένο χρήστη"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"Ενεργοποίηση κλήσεων και SMS"</string>
@@ -3112,6 +3113,8 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"Ένταση ήχου κλήσεων"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"Ένταση ήχου ξυπνητηριού"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"Ένταση κουδουν. και ειδοποιήσ."</string>
+    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
+    <skip />
     <string name="notification_volume_option_title" msgid="4838818791683615978">"Ένταση ήχου ειδοποίησης"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"Ήχος κλήσης τηλεφώνου"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"Προεπιλεγμ. ήχος ειδοποίησης"</string>
@@ -3703,8 +3706,6 @@
     <string name="filter_notif_blocked_apps" msgid="1065653868850012325">"Απενεργοποιημένες"</string>
     <string name="advanced_apps" msgid="7643010673326578815">"Σύνθετες ρυθμίσεις"</string>
     <string name="app_permissions" msgid="8666537659217653626">"Διαχείριση αδειών"</string>
-    <string name="app_permissions_summary" msgid="2709819220672938860">"Εφαρμογές που χρησιμοποιούν <xliff:g id="APPS">%1$s</xliff:g>"</string>
-    <string name="app_permissions_summary_more" msgid="6247952473615352350">"Εφαρμογές που χρησιμοποιούν <xliff:g id="APPS">%1$s</xliff:g> και άλλα"</string>
     <string name="tap_to_wake" msgid="3313433536261440068">"Πατήστε για αφύπνιση"</string>
     <string name="tap_to_wake_summary" msgid="6641039858241611072">"Πατήστε δύο φορές οπουδήποτε στην οθόνη για αφύπνιση της συσκευής"</string>
     <string name="domain_urls_title" msgid="7012209752049678876">"Σύνδεσμοι ανοίγματος"</string>
@@ -3866,7 +3867,8 @@
     <string name="users_summary" msgid="8473589474976307510">"Συνδέθηκε ως <xliff:g id="USER_NAME">%1$s</xliff:g>"</string>
     <string name="android_version_summary" msgid="7818952662015042768">"Ενημερώθηκε σε Android <xliff:g id="VERSION">%1$s</xliff:g>"</string>
     <string name="android_version_pending_update_summary" msgid="5404532347171027730">"Διαθέσιμη ενημέρωση"</string>
-    <string name="disabled_by_policy_title" msgid="3635622338687810583">"Αποκλείστηκε από τον διαχειριστή IT"</string>
+    <!-- no translation found for disabled_by_policy_title (6852347040813204503) -->
+    <skip />
     <string name="disabled_by_policy_title_adjust_volume" msgid="1669689058213728099">"Δεν είναι δυνατή η αλλαγή της έντασης του ήχου"</string>
     <string name="disabled_by_policy_title_outgoing_calls" msgid="400089720689494562">"Δεν είναι δυνατή η πραγματοποίηση κλήσεων"</string>
     <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"Δεν είναι δυνατή η αποστολή μηνυμάτων SMS"</string>
@@ -3876,7 +3878,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Αποκλείστηκε από τον πάροχο πίστωσης"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Απαιτείται συναίνεση γονέα"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Δώσε το τηλέφωνο στον γονέα σου για να ξεκινήσετε τη ρύθμιση."</string>
-    <string name="default_admin_support_msg" msgid="8338570262037182531">"Εάν έχετε απορίες, επικοινωνήστε με τον διαχειριστή IT"</string>
+    <!-- no translation found for default_admin_support_msg (8816296554831532033) -->
+    <skip />
     <string name="admin_support_more_info" msgid="8407433155725898290">"Περισσότερες λεπτομέρειες"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Ο διαχειριστής σας μπορεί να παρακολουθεί και να διαχειρίζεται τις εφαρμογές και τα δεδομένα που σχετίζονται με το προφίλ εργασίας σας, συμπεριλαμβανομένων των ρυθμίσεων, των δικαιωμάτων, της εταιρικής πρόσβασης, της δραστηριότητας δικτύου και των πληροφοριών τοποθεσίας της συσκευής."</string>
     <string name="admin_profile_owner_user_message" msgid="4929926887231544950">"Ο διαχειριστής σας μπορεί να παρακολουθεί και να διαχειρίζεται τις εφαρμογές και τα δεδομένα που σχετίζονται με αυτόν το χρήστη, συμπεριλαμβανομένων των ρυθμίσεων, των δικαιωμάτων, της εταιρικής πρόσβασης, της δραστηριότητας δικτύου και των πληροφοριών τοποθεσίας της συσκευής."</string>
@@ -4707,6 +4710,8 @@
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Χρήση επιλογών για προγραμματιστές"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Χρήση υπηρεσίας εκτύπωσης"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Να επιτρέπονται πολλαπλοί χρήστες"</string>
+    <!-- no translation found for multiple_users_main_switch_keywords (4845954458094134356) -->
+    <skip />
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Χρήση ασύρματου εντοπισμού σφαλμάτων"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Χρήση προτιμήσεων προγράμματος οδήγησης γραφικών"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"Χρήση Νυχτερινού φωτισμού"</string>
