--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -1148,7 +1148,8 @@
     <string name="display_white_balance_title" msgid="2624544323029364713">"הצגת איזון לבן"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"תצוגה חלקה"</string>
-    <string name="peak_refresh_rate_summary" msgid="1527087897198455042">"‏קצב הרענון עולה באופן אוטומטי מ-Hz‏60 ל-Hz‏90 לחלק מהתוכן. הפעולה הזו מגבירה את השימוש בסוללה."</string>
+    <!-- no translation found for peak_refresh_rate_summary (3627278682437562787) -->
+    <skip />
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"אילוץ לקצב הרענון המקסימלי"</string>
     <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"קצב הרענון הגבוה ביותר לתגובה משופרת למגע ולאיכות אנימציה טובה יותר. פעולה זו מגבירה את השימוש בסוללה."</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"המסך יישאר דלוק בזמן צפייה"</string>
@@ -1206,6 +1207,7 @@
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"הגדרות של מצב שעת השינה"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"זמן קצוב לכיבוי המסך"</string>
     <string name="screen_timeout_summary" msgid="5558778019594643427">"לאחר <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> של חוסר פעילות"</string>
+    <string name="screen_timeout_summary_not_set" msgid="5107680774964178875">"לא מוגדר"</string>
     <string name="wallpaper_settings_title" msgid="5635129851136006383">"טפט"</string>
     <string name="style_and_wallpaper_settings_title" msgid="2232042809407308946">"טפט וסגנון"</string>
     <string name="wallpaper_dashboard_summary" msgid="2324472863981057118">"מסך הבית, מסך הנעילה"</string>
@@ -2490,12 +2492,9 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"הגדרת לוח זמנים"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"הארכת חיי הסוללה"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"כיבוי כשהסוללה טעונה"</string>
-    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
-    <skip />
+    <string name="battery_saver_sticky_description_new" product="default" msgid="3618041244703216293">"מצב \'חיסכון בסוללה\' כבה כשטעינת הטלפון גבוהה מ-<xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
+    <string name="battery_saver_sticky_description_new" product="tablet" msgid="1733686775743601110">"מצב \'חיסכון בסוללה\' כבה כשטעינת הטאבלט גבוהה מ-<xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
+    <string name="battery_saver_sticky_description_new" product="device" msgid="7449283917787428755">"מצב \'חיסכון בסוללה\' כבה כשטעינת המכשיר גבוהה מ-<xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"הפעלה"</string>
@@ -2935,6 +2934,8 @@
     <string name="remove_guest_on_exit_summary" msgid="3969962695703280353">"מחיקת כל האפליקציות והנתונים של האורח ביציאה ממצב אורח"</string>
     <string name="remove_guest_on_exit_dialog_title" msgid="2310442892536079416">"למחוק את הפעילות במצב אורח?"</string>
     <string name="remove_guest_on_exit_dialog_message" msgid="8112409834021851883">"האפליקציות והנתונים מהגלישה הזו במצב אורח יימחקו עכשיו, וכל פעילות עתידית במצב אורח תימחק בכל יציאה ממצב זה"</string>
+    <!-- no translation found for remove_guest_on_exit_keywords (4961310523576166193) -->
+    <skip />
     <string name="enable_guest_calling" msgid="8300355036005240911">"לאפשר לאורח להשתמש בטלפון?"</string>
     <string name="enable_guest_calling_summary" msgid="4748224917641204782">"יבוצע שיתוף של היסטוריית השיחות עם המשתמש האורח"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"‏הפעלת שיחות טלפון ו-SMS"</string>
@@ -3198,6 +3199,8 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"עוצמת קול של שיחות"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"עוצמת קול של שעון מעורר"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"עוצמת קול של צלצול והתראות"</string>
+    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
+    <skip />
     <string name="notification_volume_option_title" msgid="4838818791683615978">"עוצמת קול של התראות"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"הרינגטון של הטלפון"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"צליל ברירת המחדל להתראות"</string>
@@ -3815,8 +3818,6 @@
     <string name="filter_notif_blocked_apps" msgid="1065653868850012325">"מושבתות"</string>
     <string name="advanced_apps" msgid="7643010673326578815">"אפשרויות מתקדמות"</string>
     <string name="app_permissions" msgid="8666537659217653626">"מנהל הרשאות"</string>
-    <string name="app_permissions_summary" msgid="2709819220672938860">"אפליקציות המשתמשות ב<xliff:g id="APPS">%1$s</xliff:g>"</string>
-    <string name="app_permissions_summary_more" msgid="6247952473615352350">"אפליקציות שמשתמשות בהרשאת <xliff:g id="APPS">%1$s</xliff:g> ועוד"</string>
     <string name="tap_to_wake" msgid="3313433536261440068">"יש להקיש כדי להעיר"</string>
     <string name="tap_to_wake_summary" msgid="6641039858241611072">"יש להקיש פעמיים בנקודה כלשהי במסך כדי להעיר את המכשיר"</string>
     <string name="domain_urls_title" msgid="7012209752049678876">"פתיחת קישורים"</string>
@@ -3982,7 +3983,8 @@
     <string name="users_summary" msgid="8473589474976307510">"התחברת בתור <xliff:g id="USER_NAME">%1$s</xliff:g>"</string>
     <string name="android_version_summary" msgid="7818952662015042768">"‏המערכת עודכנה ל-Android גרסה ‏<xliff:g id="VERSION">%1$s</xliff:g>"</string>
     <string name="android_version_pending_update_summary" msgid="5404532347171027730">"יש עדכון זמין"</string>
-    <string name="disabled_by_policy_title" msgid="3635622338687810583">"‏נחסם על ידי מנהל ה-IT"</string>
+    <!-- no translation found for disabled_by_policy_title (6852347040813204503) -->
+    <skip />
     <string name="disabled_by_policy_title_adjust_volume" msgid="1669689058213728099">"לא ניתן לשנות את הנפח"</string>
     <string name="disabled_by_policy_title_outgoing_calls" msgid="400089720689494562">"לא ניתן לבצע שיחות"</string>
     <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"‏לא ניתן לשלוח הודעות SMS"</string>
@@ -3992,7 +3994,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"ההגדרה חסומה על ידי ספק האשראי"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"צריך להיעזר בהורה"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"צריך להעביר את הטלפון לאחד ההורים כדי להתחיל בתהליך ההגדרה של אמצעי הזיהוי"</string>
-    <string name="default_admin_support_msg" msgid="8338570262037182531">"‏אם יש לך שאלות, כדאי ליצור קשר עם מנהל ה-IT"</string>
+    <!-- no translation found for default_admin_support_msg (8816296554831532033) -->
+    <skip />
     <string name="admin_support_more_info" msgid="8407433155725898290">"פרטים נוספים"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"מנהל המכשיר יכול לפקח על אפליקציות ונתונים המשויכים לפרופיל העבודה שלך ולנהל אותם, כולל הגדרות, הרשאות, גישה ארגונית, פעילות הרשת ומידע על מיקום המכשיר."</string>
     <string name="admin_profile_owner_user_message" msgid="4929926887231544950">"מנהל המכשיר יכול לפקח על אפליקציות ונתונים המשויכים למשתמש זה ולנהל אותם, כולל הגדרות, הרשאות, גישה ארגונית, פעילות הרשת ומידע על מיקום המכשיר."</string>
@@ -4847,6 +4850,8 @@
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"שימוש באפשרויות למפתחים"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"שימוש בשירות הדפסה"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"הרשאה למשתמשים מרובים"</string>
+    <!-- no translation found for multiple_users_main_switch_keywords (4845954458094134356) -->
+    <skip />
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"ניפוי באגים אלחוטי"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"שימוש בהעדפות של מנהל ההתקן לגרפיקה"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"שימוש בתאורת לילה"</string>
