--- a/res/values-kk/strings.xml
+++ b/res/values-kk/strings.xml
@@ -1104,7 +1104,8 @@
     <string name="display_white_balance_title" msgid="2624544323029364713">"Дисплейдің ақ түс балансы"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"Smooth Display"</string>
-    <string name="peak_refresh_rate_summary" msgid="1527087897198455042">"Кейбір мазмұн үшін жаңарту жиілігі 60-тан 90 Гц-ке автоматты түрде артады. Батарея заряды тезірек таусылады."</string>
+    <!-- no translation found for peak_refresh_rate_summary (3627278682437562787) -->
+    <skip />
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"Ең жоғарғы жаңарту жиілігін қолмен қосу"</string>
     <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"Жақсартылған датчик сезгіштігі және анимация сапасына арналған ең жоғарғы жаңарту жиілігі. Батарея заряды тезірек таусылады."</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"Зейінді экран"</string>
@@ -1162,6 +1163,8 @@
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"\"Ұйқы уақыты\" режимі параметрлері"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"Экранның өшуі"</string>
     <string name="screen_timeout_summary" msgid="5558778019594643427">"Әрекетсіз <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> тұрған соң"</string>
+    <!-- no translation found for screen_timeout_summary_not_set (5107680774964178875) -->
+    <skip />
     <string name="wallpaper_settings_title" msgid="5635129851136006383">"Тұсқағаз"</string>
     <string name="style_and_wallpaper_settings_title" msgid="2232042809407308946">"Тұсқағаз және стиль"</string>
     <string name="wallpaper_dashboard_summary" msgid="2324472863981057118">"Негізгі экран, құлып экраны"</string>
@@ -2412,12 +2415,9 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Кесте құру"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Батарея жұмысының ұзақтығын арттыру"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Толық зарядталғанда өшіру"</string>
-    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
-    <skip />
+    <string name="battery_saver_sticky_description_new" product="default" msgid="3618041244703216293">"Телефон <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>-дан аса зарядталғанда, Батареяны үнемдеу режимі өшеді."</string>
+    <string name="battery_saver_sticky_description_new" product="tablet" msgid="1733686775743601110">"Планшет <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>-дан аса зарядталғанда, Батареяны үнемдеу режимі өшеді."</string>
+    <string name="battery_saver_sticky_description_new" product="device" msgid="7449283917787428755">"Құрылғы <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>-дан аса зарядталғанда, Батареяны үнемдеу режимі өшеді."</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Қосу"</string>
@@ -2849,6 +2849,8 @@
     <string name="remove_guest_on_exit_summary" msgid="3969962695703280353">"Қонақ режимінен шыққан кезде, барлық қонақ қолданбасы мен дерегін жою"</string>
     <string name="remove_guest_on_exit_dialog_title" msgid="2310442892536079416">"Қонақ әрекетін жою керек пе?"</string>
     <string name="remove_guest_on_exit_dialog_message" msgid="8112409834021851883">"Осы қонақ сеансындағы қолданбалар мен деректер қазір жойылады және қонақ режимінен шыққан сайын қонақтың барлық әрекеті өшіп отырады."</string>
+    <!-- no translation found for remove_guest_on_exit_keywords (4961310523576166193) -->
+    <skip />
     <string name="enable_guest_calling" msgid="8300355036005240911">"Қонаққа телефонды пайдалануға рұқсат ету"</string>
     <string name="enable_guest_calling_summary" msgid="4748224917641204782">"Қоңыраулар тарихы осы қонақ пайдаланушымен бөлісіледі."</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"Телефон қоңырауларын және SMS қосу"</string>
@@ -3112,6 +3114,8 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"Сөйлесу кезіндегі дыбыс деңгейі"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"Оятқыштың дыбыс деңгейі"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"Қоңырау мен хабарландыру дыбысы"</string>
+    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
+    <skip />
     <string name="notification_volume_option_title" msgid="4838818791683615978">"Хабарландырудың дыбыс деңгейі"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"Телефон рингтоны"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"Әдепкі хабарландыру дыбысы"</string>
@@ -3703,8 +3707,6 @@
     <string name="filter_notif_blocked_apps" msgid="1065653868850012325">"Өшірулі"</string>
     <string name="advanced_apps" msgid="7643010673326578815">"Қосымша"</string>
     <string name="app_permissions" msgid="8666537659217653626">"Рұқсат менеджері"</string>
-    <string name="app_permissions_summary" msgid="2709819220672938860">"Рұқсат (<xliff:g id="APPS">%1$s</xliff:g>) берілген қолданбалар"</string>
-    <string name="app_permissions_summary_more" msgid="6247952473615352350">"Рұқсаты бар қолданбалар (<xliff:g id="APPS">%1$s</xliff:g> және тағы басқа)"</string>
     <string name="tap_to_wake" msgid="3313433536261440068">"Ояту үшін түрту"</string>
     <string name="tap_to_wake_summary" msgid="6641039858241611072">"Құрылғыны ояту үшін экранның кез келген жерін екі рет түртіңіз"</string>
     <string name="domain_urls_title" msgid="7012209752049678876">"Сілтемелерді ашу"</string>
@@ -3866,7 +3868,8 @@
     <string name="users_summary" msgid="8473589474976307510">"<xliff:g id="USER_NAME">%1$s</xliff:g> болып кірдіңіз"</string>
     <string name="android_version_summary" msgid="7818952662015042768">"Android <xliff:g id="VERSION">%1$s</xliff:g> нұсқасына жаңартылды"</string>
     <string name="android_version_pending_update_summary" msgid="5404532347171027730">"Жаңартылған нұсқа қолжетімді"</string>
-    <string name="disabled_by_policy_title" msgid="3635622338687810583">"Әкімшіңіз бөгеген"</string>
+    <!-- no translation found for disabled_by_policy_title (6852347040813204503) -->
+    <skip />
     <string name="disabled_by_policy_title_adjust_volume" msgid="1669689058213728099">"Дыбыс деңгейі өзгертілмейді"</string>
     <string name="disabled_by_policy_title_outgoing_calls" msgid="400089720689494562">"Қоңырау шалу мүмкін емес"</string>
     <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"SMS хабарын жіберу мүмкін емес"</string>
@@ -3876,7 +3879,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Кредит беруші тарапынан бөгелді."</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Ата-ана келісімі қажет"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Реттеуді бастау үшін телефонды ата-анаңызға беріңіз."</string>
-    <string name="default_admin_support_msg" msgid="8338570262037182531">"Сұрақтарыңыз болса, әкімшіге хабарласыңыз."</string>
+    <!-- no translation found for default_admin_support_msg (8816296554831532033) -->
+    <skip />
     <string name="admin_support_more_info" msgid="8407433155725898290">"Қосымша мәліметтер"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Әкімші қолданбаларды және жұмыс профиліңізбен байланысты деректерді, соның ішінде, параметрлерді, рұқсаттарды, корпоративтік кіру рұқсаттарын, желілік белсенділікті және құрылғының орны туралы ақпаратты бақылай және басқара алады."</string>
     <string name="admin_profile_owner_user_message" msgid="4929926887231544950">"Әкімші қолданбаларды және осы пайдаланушымен байланысты деректерді, соның ішінде, параметрлерді, рұқсаттарды, корпоративтік кіру рұқсаттарын, желілік белсенділікті және құрылғының орны туралы ақпаратты бақылай және басқара алады."</string>
@@ -4707,6 +4711,8 @@
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Әзірлеуші опцияларын пайдалану"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Баспа қызметін пайдалану"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Бірнеше пайдаланушыға рұқсат беру"</string>
+    <!-- no translation found for multiple_users_main_switch_keywords (4845954458094134356) -->
+    <skip />
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Сымсыз түзетуді пайдалану"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Графикалық драйвер параметрлерін пайдалану"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"Түнгі жарықты пайдалану"</string>
