--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -1104,7 +1104,8 @@
     <string name="display_white_balance_title" msgid="2624544323029364713">"Bonisa ibhalansi emhlophe"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"Isibonisi esibushelelezi"</string>
-    <string name="peak_refresh_rate_summary" msgid="1527087897198455042">"Iphakamisa ngokuzenzakalela isilinganiso sokuvuselela kusukela kokungu-60 ukuya kokungu-90 Hz kokunye okuqukethwe. Ikhuphula ukusetshenziswa kwebhethri."</string>
+    <!-- no translation found for peak_refresh_rate_summary (3627278682437562787) -->
+    <skip />
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"Phoqelela isilinganiso sokuvuselela esiphakeme"</string>
     <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"Inani lokuvuselela eliphezulu kakhulu lokuphendula kokuthinta okuthuthukisiwe nekhwalithi yokugqwayiza. Ikhuphula ukusetshenziswa kwebhethri."</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"Ukunaka isikrini"</string>
@@ -1162,6 +1163,7 @@
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"Amasethingi emodi yesikhathi sokulala"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"Isikrini siphelelwe yisikhathi"</string>
     <string name="screen_timeout_summary" msgid="5558778019594643427">"Emva <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> okungasebenzi"</string>
+    <string name="screen_timeout_summary_not_set" msgid="5107680774964178875">"Ayisethiwe"</string>
     <string name="wallpaper_settings_title" msgid="5635129851136006383">"Iphephadonga"</string>
     <string name="style_and_wallpaper_settings_title" msgid="2232042809407308946">"Isithombe sangemuva nesitayela"</string>
     <string name="wallpaper_dashboard_summary" msgid="2324472863981057118">"Ekhaya, ukukhiya isikrini"</string>
@@ -2413,12 +2415,9 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Setha ishejuli"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Khulisa impilo yebhethri"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Vala lapho ishajiwe"</string>
-    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
-    <skip />
-    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
-    <skip />
+    <string name="battery_saver_sticky_description_new" product="default" msgid="3618041244703216293">"Isilondolozi sebhethri sicisha lapho ifoni yakho ishaja ngaphezu kuka-<xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
+    <string name="battery_saver_sticky_description_new" product="tablet" msgid="1733686775743601110">"Isilondolozi Sebhethri sicisha lapho ithebulethi yakho ishaja ngaphezu kuka-<xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
+    <string name="battery_saver_sticky_description_new" product="device" msgid="7449283917787428755">"Isilondolozi sebhethri sicisha lapho idivayisi yakho ishaja ngaphezu kuka-<xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Vula"</string>
@@ -2850,6 +2849,8 @@
     <string name="remove_guest_on_exit_summary" msgid="3969962695703280353">"Sula wonke ama-app wesihambeli nedatha lapho uphuma kwimodi yesivakashi"</string>
     <string name="remove_guest_on_exit_dialog_title" msgid="2310442892536079416">"Sula umsebenzi wesihambeli?"</string>
     <string name="remove_guest_on_exit_dialog_message" msgid="8112409834021851883">"Ama-app nedatha okusuka kulesi sikhathi sesihambeli kuzosulwa manje, wonke umsebenzi wesihambeli wesikhathi esizayo uzosulwa njalo lapho uphuma kwimodi yesivakashi."</string>
+    <!-- no translation found for remove_guest_on_exit_keywords (4961310523576166193) -->
+    <skip />
     <string name="enable_guest_calling" msgid="8300355036005240911">"Vumela isihambeli ukusebenzisa ifoni"</string>
     <string name="enable_guest_calling_summary" msgid="4748224917641204782">"Umlando wekholi uzokwabiwa nomsebenzisi wesihambeli"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"Vula amakholi wefoni ne-SMS"</string>
@@ -3113,6 +3114,8 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"Ivolumi yocingo"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"Ivolumu ye-alamu"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"Ivolumu yokukhala neyesaziso"</string>
+    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
+    <skip />
     <string name="notification_volume_option_title" msgid="4838818791683615978">"Ivolumu yesaziso"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"Iringithoni yefoni"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"Umsindo wesaziso ozenzakalelayo"</string>
@@ -3704,8 +3707,6 @@
     <string name="filter_notif_blocked_apps" msgid="1065653868850012325">"Vala"</string>
     <string name="advanced_apps" msgid="7643010673326578815">"Okuthuthukisiwe"</string>
     <string name="app_permissions" msgid="8666537659217653626">"Isiphathi semvume"</string>
-    <string name="app_permissions_summary" msgid="2709819220672938860">"Izinhlelo zokusebenza ezisebenzisa ama-<xliff:g id="APPS">%1$s</xliff:g>"</string>
-    <string name="app_permissions_summary_more" msgid="6247952473615352350">"Izinhlelo zokusebenza ezisebenzisa i-<xliff:g id="APPS">%1$s</xliff:g>, nokuningi"</string>
     <string name="tap_to_wake" msgid="3313433536261440068">"Thepha ukuze uvuse"</string>
     <string name="tap_to_wake_summary" msgid="6641039858241611072">"Thepha kabili noma yikuphi kusikrini ukuze uvuse idivayisi"</string>
     <string name="domain_urls_title" msgid="7012209752049678876">"Ivula amalinki"</string>
@@ -3867,7 +3868,8 @@
     <string name="users_summary" msgid="8473589474976307510">"Ungene ngemvume njengo-<xliff:g id="USER_NAME">%1$s</xliff:g>"</string>
     <string name="android_version_summary" msgid="7818952662015042768">"Ibuyekezelwe ku-Android engu-<xliff:g id="VERSION">%1$s</xliff:g>"</string>
     <string name="android_version_pending_update_summary" msgid="5404532347171027730">"Isibuyekezo siyatholakala"</string>
-    <string name="disabled_by_policy_title" msgid="3635622338687810583">"Kuvinjelwe umlawuli wakho we-IT"</string>
+    <!-- no translation found for disabled_by_policy_title (6852347040813204503) -->
+    <skip />
     <string name="disabled_by_policy_title_adjust_volume" msgid="1669689058213728099">"Ayikwazi ukushintsha ivolumu"</string>
     <string name="disabled_by_policy_title_outgoing_calls" msgid="400089720689494562">"Ayikwazi ukwenza amakholi"</string>
     <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"Ayikwazi ukuthumela imiyalezo ye-SMS"</string>
@@ -3877,7 +3879,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Kuvinjwe umhlinzeki wakho wekhredithi"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Umzali uyadingeka"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Nika ifoni umzali wakho ukuze uqale ukusetha lokhu"</string>
-    <string name="default_admin_support_msg" msgid="8338570262037182531">"Uma unemibuzo, xhumana nomlawuli wakho we-IT"</string>
+    <!-- no translation found for default_admin_support_msg (8816296554831532033) -->
+    <skip />
     <string name="admin_support_more_info" msgid="8407433155725898290">"Imininingwane engaphezulu"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Umqondisi wakho angakwazi ukwengamela futhi aphathe izinhlelo zokusebenza nedatha ephathelene nephrofayela yakho yomsebenzi kufaka phakathi izilungiselelo, izimvume, ukufinyelela kwezinkampani, umsebenzi wenethiwekhi kanye nolwazi lwedivayisi yakho."</string>
     <string name="admin_profile_owner_user_message" msgid="4929926887231544950">"Umqondisi wakho angakwazi ukwengamela futhi aphathe izinhlelo zokusebenza nedatha ephathelene nalo msebenzisi, kufaka phakathi izilungiselelo, izimvume, ukufinyelela kwezinkampani, umsebenzi wenethiwekhi kanye nolwazi lwendawo ledivayisi yakho."</string>
@@ -4708,6 +4711,8 @@
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Sebenzisa izinkinobho zikanjiniyela"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Sebenzisa isevisi yokuphrinta"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Vumela abasebenzisi abaningi"</string>
+    <!-- no translation found for multiple_users_main_switch_keywords (4845954458094134356) -->
+    <skip />
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Sebenzisa ukususa ibhagi nge-Wi-Fi"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Sebenzisa okuncanyelwayo kwesishayeli sokuyingcaca"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"Sebenzisa Ukukhanya kwasebusuku"</string>
